--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>momentum</title>
-    <link rel="stylesheet" href="javacss/login.css">
+    <link rel="stylesheet" href="javascss/login.css">
 </head>
 <body>
     <div id="bg">
