--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>momentum</title>
-    <link rel="stylesheet" href="<%= BASE_URL %>javascss/login.css">
+    <link rel="stylesheet" href="javascss/login.css">
     <!--https://github.com/PHIhyein/momentom_js/blob/main/javascss/login.css-->
     <!--javascss/login.css-->
 </head>
